--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Distance control</title>
     </head>
     <body>
-        <canvas id="mouse-canvas" width="200" height="200" style="border:1px solid #000000">
+        <canvas id="mouse-canvas">
         </canvas>
         <div class="debug">
         </div>
