--- a/index.html
+++ b/index.html
@@ -1,16 +1,91 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Distance control</title>
+        <title>Distance touchpad</title>
+        <style>
+        body {
+            overflow: hidden;
+        }
+        #mouse-canvas {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
+        input, button {
+            width: 50px;
+            height: 50px;
+            margin:0;
+            padding:0;
+            appearance: none;
+            -webkit-appearance: none;
+            border: 1px solid black;
+            display: block;
+            background-color: #ccc;
+        }
+        button:active {
+            background-color: #555;
+            color: #fff;
+        }
+        input:focus {
+            outline: none;
+        }
+        .buttons {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100vw;
+            display: flex;
+            align-items: flex-end;
+            justify-content: space-around;
+        }
+        input[type="checkbox"]::before, #keyboard::before {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            display: grid;
+            place-content: center center;
+        }
+        input[type="checkbox"]:checked {
+            background-color: black;
+        }
+        input[type="checkbox"]:checked::before {
+            color: white;
+        }
+        #ctrl::before {
+            content: 'ctrl';
+        }
+        #alt::before {
+            content: 'alt';
+        }
+        #keyboard-container {
+            position: relative;
+            display: grid;
+        }
+        #keyboard-label {
+            position: absolute;
+            top: 33%;
+            font-size: 12px;
+            padding-left: 15px;
+        }
+        </style>
     </head>
     <body>
         <canvas id="mouse-canvas">
         </canvas>
-        <div class="debug">
-        </div>
+        <div class="buttons">
+            <div class="keyboard-container">
+                <input type="password" id="keyboard"/>
+                <span  id="keyboard-label">keys</span>
+            </div>
+            <input type="checkbox" id="ctrl" name="ctrl"/>
+            <input type="checkbox" id="alt" name="alt"/>
+            <button id="esc">esc</button>
+            <button id="tab">tab</button>
+        <div>
+        <div class="debug"></div>
         <script src="/socket.io/socket.io.js"></script>
-        <script src="/touchpad_2.js">
-        </script>
+        <script src="/touchpad.js"></script>
     </body>
 </html>
